Bug 534561. When scrolling with SW_SCROLLCHILDREN, invalidate any affected window that is not wholly inside the destination *or* source area, and do the invalidation after we've scrolled and moved the window. r=jmathies